feat: ノートの折りたたみ制限を回避できるポリシーを追加

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1699,6 +1699,7 @@ _role:
     canSearchNotes: "ノート検索の利用"
     canUseTranslator: "翻訳機能の利用"
     avatarDecorationLimit: "アイコンデコレーションの最大取付個数"
+    avoidNoteCollapse: "ノートの「もっと見る」制限を回避"
   _condition:
     roleAssignedTo: "マニュアルロールにアサイン済み"
     isLocal: "ローカルユーザー"
