--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1902,6 +1902,13 @@ _channel:
   nameAndDescription: "名前と説明"
   nameOnly: "名前のみ"
   allowRenoteToExternal: "チャンネル外へのリノートと引用リノートを許可する"
+  addCollaborator: "共同管理者を追加"
+  collaborators: "共同管理者"
+  transferAdminConfirmTitle: "管理者権限の移譲"
+  transferAdminConfirmDescription: "このチャンネルの管理者権限を{user}に譲渡しますか？"
+  transferAdminReConfirmDescription: "このチャンネルの管理者権限を本当に譲渡しますか？"
+  dangerSettings: "危険な設定"
+
 
 _menuDisplay:
   sideFull: "横"
